Fix button alignment in login box, again related to #75.

--- a/themes/townsquare/css/global.css.less
+++ b/themes/townsquare/css/global.css.less
@@ -415,13 +415,10 @@ header#section-header {
         }
       }
       .form-item-pass {
-        margin-bottom: 8px;
+        margin-bottom: 12px;
       }
       input.form-submit, .links a {
         margin-right: 5px;
-      }
-      .links a {
-        .button;
       }
       #edit-submit {
         font-weight: bold;
